# openaiAgenticAIChatbot

./: pyproject.toml
src/op_ag_ai/: chatbot.py
src/op_ag_ai/public/elements/: persistentbanner.jsx
