[project]
name = "op-ag-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sarwadnya Mutkule", email = "sarwadnyamutkule99@gmail.com" }
]
requires-python = "==3.12.10"
dependencies = [
    "chainlit>=2.6.0",
    "openai-agents>=0.1.0",
]

[project.scripts]
op-ag-ai = "op_ag_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
